package net.service.fieldmanager;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class FieldmanagerApplication {

	public static void main(String[] args) {
		SpringApplication.run(FieldmanagerApplication.class, args);
	}

}
