package net.service.fieldmanager.user;

public enum Role {
    User,
    Admin
}
